--- a/src/main/resources/ku/cs/order.fxml
+++ b/src/main/resources/ku/cs/order.fxml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
@@ -14,105 +11,83 @@
     <children>
       <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#d4c1a8" height="60.0" layoutX="30.0" layoutY="10.0" stroke="WHITE" strokeType="INSIDE" width="482.0" />
         <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#fffcf1" height="200.0" layoutX="10.0" layoutY="47.0" stroke="WHITE" strokeType="INSIDE" width="665.0" />
-        <VBox layoutX="22.0" layoutY="34.0" prefHeight="250.0" prefWidth="173.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="525.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <ImageView fx:id="bookImageView" fitHeight="168.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
-                    <VBox.margin>
-                        <Insets left="25.0" top="75.0" />
-                    </VBox.margin>
-                    <image>
-                        <Image url="@image/book10_horimiya_cartoon.jpg" />
-                    </image>
-                </ImageView>
-            </children>
-        </VBox>
-        <VBox layoutX="50.0" layoutY="5.0" prefHeight="235.0" prefWidth="197.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="175.0" AnchorPane.rightAnchor="275.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <Label text="ชื่อหนังสือ" textFill="#f99f28">
-                    <font>
-                        <Font name="JasmineUPC" size="28.0" />
-                    </font>
-                    <VBox.margin>
-                        <Insets left="5.0" top="60.0" />
-                    </VBox.margin>
-                </Label>
-                <Label fx:id="bookNameLabel" text="โฮริมิยะ สาวมั่นกับนายมืดมน">
-                    <font>
-                        <Font name="JasmineUPC" size="22.0" />
-                    </font>
-                    <VBox.margin>
-                        <Insets left="10.0" top="5.0" />
-                    </VBox.margin>
-                </Label>
-                <Label text="จำนวนสินค้า" textFill="#f99f28">
-                    <font>
-                        <Font name="JasmineUPC" size="28.0" />
-                    </font>
-                    <VBox.margin>
-                        <Insets left="5.0" top="10.0" />
-                    </VBox.margin>
-                </Label>
-                <Label fx:id="numBookLabel" text="2 เล่ม">
-                    <font>
-                        <Font name="JasmineUPC" size="22.0" />
-                    </font>
-                    <VBox.margin>
-                        <Insets left="10.0" top="5.0" />
-                    </VBox.margin>
-                </Label>
-            <Label text="สถานะสินค้า" textFill="#f99f28">
-               <font>
+          <Label layoutX="200.0" layoutY="65.0" text="ชื่อหนังสือ">
+              <font>
                   <Font name="JasmineUPC" size="28.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="5.0" top="10.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="statusLabel" text="ยังไม่จัดส่ง">
-               <font>
-                  <Font name="JasmineUPC" size="22.0" />
-               </font>
-               <VBox.margin>
-                  <Insets left="10.0" top="5.0" />
-               </VBox.margin>
-            </Label>
-            </children>
-        </VBox>
-        <Button layoutX="560.0" layoutY="200.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="102.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="แก้ไขข้อมูล" textFill="WHITE">
-            <font>
-                <Font name="JasmineUPC" size="18.0" />
-            </font>
-        </Button>
-        <Label fx:id="notificationForStock" layoutX="382.0" layoutY="185.0" textFill="#fc0606" />
-      <Label layoutX="45.0" layoutY="20.0" text="ชื่อผู้ซื้อ">
-         <font>
-            <Font name="JasmineUPC" size="26.0" />
-         </font>
-      </Label>
-      <Label fx:id="nameCustomerLabel" layoutX="110.0" layoutY="20.0" text="Javapai RaoKodNarak" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="26.0" />
-         </font>
-      </Label>
-      <Label fx:id="contactCustomerLabel" layoutX="385.0" layoutY="20.0" text="0815112001" textFill="WHITE">
-         <font>
-            <Font name="JasmineUPC" size="24.0" />
-         </font>
-      </Label>
-      <Label layoutX="400.0" layoutY="110.0" text="ราคารวมสินค้า" textFill="#f99f28">
+              </font>
+          </Label>
+          <Label fx:id="bookNameLabel" layoutX="340.0" layoutY="68.0" text="โฮริมิยะ สาวมั่นกับนายมืดมน" textFill="#a05e07">
+              <font>
+                  <Font name="JasmineUPC" size="24.0" />
+              </font>
+          </Label>
+          <Label layoutX="200.0" layoutY="95.0" text="จำนวนสินค้า">
+              <font>
+                  <Font name="JasmineUPC" size="28.0" />
+              </font>
+          </Label>
+          <Label fx:id="numBookLabel" layoutX="340.0" layoutY="98.0" text="2 เล่ม" textFill="#a05e07">
+              <font>
+                  <Font name="JasmineUPC" size="24.0" />
+              </font>
+          </Label>
+      <Label layoutX="200.0" layoutY="155.0" text="สถานะการโอน">
          <font>
             <Font name="JasmineUPC" size="28.0" />
          </font>
       </Label>
-      <Label fx:id="numPriceLabel" layoutX="405.0" layoutY="135.0" text="80.25  บาท">
+      <Label fx:id="statusBookLabel" layoutX="340.0" layoutY="188.0" text="ยังไม่จัดส่ง" textFill="#a05e07">
          <font>
-            <Font name="JasmineUPC" size="22.0" />
+            <Font name="JasmineUPC" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="310.0" layoutY="20.0" text="เบอร์โทร">
+        <Button layoutX="560.0" layoutY="190.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="102.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="แก้ไขข้อมูล" textFill="WHITE">
+            <font>
+                <Font name="JasmineUPC" size="22.0" />
+            </font>
+        </Button>
+        <Label fx:id="notificationForStock" layoutX="382.0" layoutY="185.0" textFill="#fc0606" />
+      <Label layoutX="45.0" layoutY="22.0" text="ชื่อผู้ซื้อ">
+         <font>
+            <Font name="JasmineUPC Bold" size="26.0" />
+         </font>
+      </Label>
+      <Label fx:id="nameCustomerLabel" layoutX="115.0" layoutY="20.0" text="Javapai RaoKodNarak">
          <font>
             <Font name="JasmineUPC" size="26.0" />
          </font>
       </Label>
+      <Label fx:id="contactCustomerLabel" layoutX="385.0" layoutY="22.0" text="0815112001">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="200.0" layoutY="125.0" text="ราคารวมสินค้า">
+         <font>
+            <Font name="JasmineUPC" size="28.0" />
+         </font>
+      </Label>
+      <Label fx:id="numPriceLabel" layoutX="340.0" layoutY="128.0" text="80.25  บาท" textFill="#a05e07">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="305.0" layoutY="22.0" text="เบอร์โทร">
+         <font>
+            <Font name="JasmineUPC Bold" size="26.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="170.0" fitWidth="140.0" layoutX="30.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true" />
+      <Label layoutX="200.0" layoutY="185.0" text="เลขติดตามพัสดุ">
+         <font>
+            <Font name="JasmineUPC" size="28.0" />
+         </font>
+      </Label>
+      <Label fx:id="statusMoneyLabel" layoutX="340.0" layoutY="158.0" text="โอนแล้ว" textFill="#a05e07">
+         <font>
+            <Font name="JasmineUPC" size="24.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="bookImageView" fitHeight="170.0" fitWidth="140.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true" />
     </children>
 </AnchorPane>
