--- a/src/main/resources/ku/cs/orderList.fxml
+++ b/src/main/resources/ku/cs/orderList.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import java.lang.String?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.OrderListController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.seller.OrderListController">
     <children>
         <BorderPane layoutX="-22.0" layoutY="3.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -149,19 +160,27 @@
                               <Insets bottom="10.0" left="20.0" top="20.0" />
                            </HBox.margin>
                               </Label>
-                        <ToggleButton mnemonicParsing="false" prefHeight="15.0" prefWidth="310.0" style="-fx-background-color: F99F28; -fx-background-radius: 20;" text="ToggleButton" textFill="WHITE">
-                           <HBox.margin>
-                              <Insets left="160.0" top="10.0" />
-                           </HBox.margin>
+                        <Button fx:id="shippedButton" mnemonicParsing="false" style="-fx-background-color: ffffff; -fx-background-radius: 10; -fx-border-color: F99F28; -fx-border-width: 4; -fx-border-radius: 10;" text="จัดส่งแล้ว">
                            <font>
-                              <Font name="JasmineUPC" size="32.0" />
+                              <Font name="JasmineUPC" size="24.0" />
                            </font>
-                        </ToggleButton>
+                           <HBox.margin>
+                              <Insets left="180.0" top="15.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="newOrderButton" mnemonicParsing="false" style="-fx-background-color: ffffff; -fx-background-radius: 10; -fx-border-color: F99F28; -fx-border-width: 4; -fx-border-radius: 10;" text="รายการสั่งซื้อใหม่">
+                           <font>
+                              <Font name="JasmineUPC" size="24.0" />
+                           </font>
+                           <HBox.margin>
+                              <Insets left="10.0" top="15.0" />
+                           </HBox.margin>
+                        </Button>
                      </children>
                   </HBox>
-                        <ScrollPane fx:id="scoll" prefHeight="582.0" prefWidth="698.0" style="-fx-background-color: fffff;" VBox.vgrow="ALWAYS">
+                        <ScrollPane fx:id="scoll" fitToHeight="true" fitToWidth="true" prefHeight="582.0" prefWidth="698.0" style="-fx-background-color: fffff;" VBox.vgrow="ALWAYS">
                             <content>
-                                <GridPane fx:id="grid">
+                                <GridPane fx:id="grid" style="-fx-background-color: ffffff;">
                                     <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                     </columnConstraints>
@@ -173,7 +192,7 @@
                         </ScrollPane>
                         <HBox prefHeight="80.0" prefWidth="698.0">
                             <children>
-                                <Button fx:id="allSellerStockButtonn" mnemonicParsing="false" onAction="#handleSellerStockButton" prefHeight="45.0" prefWidth="175.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ดูสินค้าทั้งหมด" textFill="WHITE">
+                                <Button fx:id="allSellerStockButtonn" mnemonicParsing="false" onAction="#handleSellerStockButton" prefHeight="40.0" prefWidth="175.0" style="-fx-background-color: F99F28; -fx-background-radius: 10;" text="ดูสินค้าทั้งหมด" textFill="WHITE">
                                     <font>
                                         <Font name="JasmineUPC" size="28.0" />
                                     </font>
