--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
+<AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
    <children>
       <HBox fx:id="head1" prefHeight="69.0" prefWidth="1024.0" stylesheets="@style/style.css">
 
@@ -311,14 +311,14 @@
                   </Label>
                   <VBox layoutX="390.0" layoutY="495.0" maxWidth="579.0" prefWidth="579.0">
                      <children>
-                        <Label fx:id="bookDetail" lineSpacing="10.0" maxWidth="579.0" prefWidth="86.0" text="bookDetail" wrapText="true">
+                        <Label fx:id="bookDetail" lineSpacing="10.0" maxWidth="579.0" prefWidth="579.0" text="bookDetail" wrapText="true">
                            <font>
                               <Font name="JasmineUPC" size="28.0" />
                            </font>
                         </Label>
                      </children>
                   </VBox>
-                  <TextField fx:id="commentTextField" layoutX="83.0" layoutY="713.0" prefHeight="86.0" prefWidth="865.0" promptText="เพิ่มความคิดเห็นที่นี้..." style="-fx-background-radius: 10; -fx-border-color: gray; -fx-border-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" />
+                  <TextField fx:id="commentTextField" layoutX="83.0" layoutY="713.0" prefHeight="86.0" prefWidth="865.0" promptText="เพิ่มความคิดเห็นที่นี่..." style="-fx-background-radius: 10; -fx-border-color: gray; -fx-border-radius: 10;" styleClass="font_jasmine_20pt" stylesheets="@style/PrimaryTheme.css" />
                   <VBox layoutX="63.0" layoutY="868.0" prefHeight="459.0" prefWidth="902.0" style="-fx-background-color: white;">
                      <children>
                         <ScrollPane prefHeight="464.0" prefWidth="902.0" style="-fx-background-color: white;">
@@ -337,6 +337,11 @@
                      </children>
                   </VBox>
                   <Label layoutX="106.0" layoutY="589.0" prefHeight="26.0" prefWidth="189.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
+                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="สั่งซื้อสินค้า" textFill="WHITE">
+                     <font>
+                        <Font name="JasmineUPC Bold" size="20.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
         </content>
