--- a/src/main/resources/ku/cs/pageBookType.fxml
+++ b/src/main/resources/ku/cs/pageBookType.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -18,10 +19,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.TypeBookController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.TypeBookController">
    <children>
       <BorderPane layoutY="52.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -31,7 +33,7 @@
                      <children>
                         <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
                            <children>
-                              <ImageView fx:id="logoJavaPai" fitHeight="68.0" fitWidth="69.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#mouseClickedInLogo">
+                              <ImageView fx:id="logoJavaPai" fitHeight="68.0" fitWidth="69.0" onMouseClicked="#mouseClickedInLogo" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@image/logoverLightBrown.png" />
                                  </image>
@@ -110,14 +112,14 @@
                         <Insets bottom="20.0" />
                      </VBox.margin>
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="684.7999847412109" minWidth="10.0" prefWidth="684.7999847412109" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="684.7999847412109" minWidth="10.0" prefWidth="150.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="969.1999816894531" minWidth="10.0" prefWidth="340.00001525878906" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <HBox alignment="CENTER_LEFT" prefHeight="71.0" prefWidth="1024.0">
+                        <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="651.0">
                            <children>
                               <Text fx:id="bookHeadLabel" fill="#a05e07" strokeType="OUTSIDE" strokeWidth="0.0" text="ประเภทของหนังสือ">
                                  <HBox.margin>
@@ -147,18 +149,48 @@
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets>
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
                         </HBox>
-                        <HBox spacing="20.0" GridPane.columnIndex="1">
+                        <HBox prefHeight="28.0" prefWidth="368.0" spacing="20.0" GridPane.columnIndex="1">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#handleLowPriceToMaxPrice" prefHeight="28.0" prefWidth="132.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
+                              <TextField fx:id="inputLowPriceLabel" prefHeight="25.0" prefWidth="105.0" promptText="ใส่ช่วงราคาน้อย" style="-fx-background-radius: 20;">
+                                 <HBox.margin>
+                                    <Insets top="3.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="17.0" />
+                                 </font>
+                              </TextField>
+                              <Line endX="-64.70709228515625" endY="4.589557647705078E-6" startX="-26.747512817382812" startY="-0.032782863825559616" stroke="#636262">
+                                 <HBox.margin>
+                                    <Insets top="15.0" />
+                                 </HBox.margin>
+                              </Line>
+                              <TextField fx:id="inputMaxPriceLabel" prefHeight="25.0" prefWidth="101.0" promptText="ใส่ช่วงราคามาก" style="-fx-background-radius: 20;">
+                                 <HBox.margin>
+                                    <Insets top="3.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="JasmineUPC" size="17.0" />
+                                 </font>
+                              </TextField>
+                              <Button mnemonicParsing="false" onAction="#handleLowPriceToMaxPrice" prefHeight="28.0" prefWidth="134.0" style="-fx-background-radius: 20;" text="ราคาน้อยไปมาก">
                                  <font>
                                     <Font name="JasmineUPC" size="20.0" />
                                  </font>
+                                 <HBox.margin>
+                                    <Insets right="5.0" />
+                                 </HBox.margin>
                               </Button>
-                              <Button mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="34.0" prefWidth="122.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
+                              <Button mnemonicParsing="false" onAction="#handleMaxPriceToLowPrice" prefHeight="28.0" prefWidth="140.0" style="-fx-background-radius: 20;" text="ราคามากไปน้อย">
                                  <font>
                                     <Font name="JasmineUPC" size="20.0" />
                                  </font>
+                                 <HBox.margin>
+                                    <Insets right="20.0" />
+                                 </HBox.margin>
                               </Button>
                            </children>
                            <GridPane.margin>
