--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -21,10 +21,9 @@
 
 <AnchorPane onMouseClicked="#handleToBookSortFromShop" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: #ffff;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.BookDetailController">
    <children>
-      <HBox fx:id="head1" prefHeight="69.0" prefWidth="1024.0" stylesheets="@style/style.css">
-
+      <HBox prefHeight="69.0" prefWidth="1024.0" stylesheets="@style/style.css">
          <children>
-            <HBox fx:id="head11" prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
+            <HBox prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
                <children>
                   <ImageView fx:id="logoJavaPai" fitHeight="68.0" fitWidth="69.0" onMouseClicked="#mouseClickedInLogo" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -113,7 +112,7 @@
                         <Image url="@image/BackIcon.png" />
                      </image>
                   </ImageView>
-                  <Button fx:id="sendComment" layoutX="711.0" layoutY="814.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="241.0" style="-fx-background-radius: 20;" text="ส่งความคิดเห็น" textFill="WHITE">
+                  <Button fx:id="sendComment" layoutX="711.0" layoutY="814.0" mnemonicParsing="false" onAction="#handleSendCommentButton" prefHeight="26.0" prefWidth="241.0" style="-fx-background-radius: 20;" text="ส่งความคิดเห็น" textFill="WHITE">
                      <stylesheets>
                         <URL value="@style/PrimaryTheme.css" />
                         <URL value="@style/style.css" />
@@ -127,7 +126,7 @@
                      <children>
                         <Button mnemonicParsing="false" style="-fx-background-color: white;" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
                            <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fx:id="heart1" fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
                                  <image>
                                     <Image url="@image/heart.png" />
                                  </image>
@@ -139,7 +138,7 @@
                         </Button>
                         <Button mnemonicParsing="false" style="-fx-background-color: white;" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
                            <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
                                  <image>
                                     <Image url="@image/heart.png" />
                                  </image>
@@ -151,7 +150,7 @@
                         </Button>
                         <Button mnemonicParsing="false" style="-fx-background-color: white;" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
                            <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
                                  <image>
                                     <Image url="@image/heart.png" />
                                  </image>
@@ -163,7 +162,7 @@
                         </Button>
                         <Button mnemonicParsing="false" style="-fx-background-color: white;" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
                            <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
                                  <image>
                                     <Image url="@image/heart.png" />
                                  </image>
@@ -175,7 +174,7 @@
                         </Button>
                         <Button mnemonicParsing="false" style="-fx-background-color: white;" styleClass="bevel-red" stylesheets="@style/PrimaryTheme.css">
                            <graphic>
-                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="43.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true" styleClass="bevel-red">
                                  <image>
                                     <Image url="@image/heart.png" />
                                  </image>
