--- a/src/main/resources/ku/cs/bookDetail.fxml
+++ b/src/main/resources/ku/cs/bookDetail.fxml
@@ -336,9 +336,9 @@
                      </children>
                   </VBox>
                   <Label layoutX="106.0" layoutY="589.0" prefHeight="26.0" prefWidth="189.0" styleClass="font_jasmine_25pt" stylesheets="@style/PrimaryTheme.css" text="คะแนนของสินค้า" textFill="#f99f28" />
-                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="สั่งซื้อสินค้า" textFill="WHITE">
+                  <Button layoutX="819.0" layoutY="588.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="145.0" style="-fx-background-radius: 20; -fx-background-color: F99F28;" text="สั่งซื้อสินค้า" textAlignment="CENTER" textFill="WHITE">
                      <font>
-                        <Font name="JasmineUPC Bold" size="20.0" />
+                        <Font name="JasmineUPC" size="28.0" />
                      </font>
                   </Button>
                </children>
