--- a/src/main/resources/ku/cs/pageBookShop.fxml
+++ b/src/main/resources/ku/cs/pageBookShop.fxml
@@ -6,7 +6,6 @@
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -16,6 +15,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -29,29 +29,22 @@
                     <children>
                         <HBox prefHeight="69.0" prefWidth="1024.0">
                      <children>
-                        <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
+                        <HBox fx:id="head11" prefHeight="69.0" prefWidth="1024.0" styleClass="backgroundColorInHeadPages" stylesheets="@style/style.css">
                            <children>
                               <ImageView fx:id="logoJavaPai" fitHeight="68.0" fitWidth="69.0" onMouseClicked="#mouseClickedInLogo" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@image/logoverLightBrown.png" />
                                  </image>
                               </ImageView>
-                              <MenuButton fx:id="bookTypeMenuItem" mnemonicParsing="false" prefHeight="38.0" prefWidth="136.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="ประเภท" textFill="WHITE">
+                              <Button mnemonicParsing="false" onAction="#handleAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets left="40.0" top="13.0" />
-                                 </HBox.margin>
-                              </MenuButton>
-                              <Button mnemonicParsing="false" onAction="#handlePageAllTypeBookButton" prefHeight="38.0" prefWidth="165.0" style="-fx-background-color: #c9ad88; -fx-background-radius: 20;" text="หนังสือทั้งหมด" textFill="WHITE">
-                                 <font>
-                                    <Font name="JasmineUPC" size="25.0" />
-                                 </font>
-                                 <HBox.margin>
-                                    <Insets left="30.0" right="-20.0" top="13.0" />
+                                    <Insets left="30.0" right="20.0" top="13.0" />
                                  </HBox.margin>
                               </Button>
+                              <Pane maxWidth="136.0" minWidth="136.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS" />
                               <Button fx:id="status" mnemonicParsing="false" prefHeight="20.0" prefWidth="91.0" style="-fx-background-radius: 20;" text="Status" textFill="WHITE">
                                  <font>
                                     <Font name="JasmineUPC" size="25.0" />
