--- a/src/main/resources/ku/cs/pageBookType.fxml
+++ b/src/main/resources/ku/cs/pageBookType.fxml
@@ -22,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.TypeBookController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.system.TypeBookController">
    <children>
       <BorderPane layoutY="52.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -122,7 +122,7 @@
                            <children>
                               <Text fx:id="bookHeadLabel" fill="#a05e07" strokeType="OUTSIDE" strokeWidth="0.0" text="ประเภทของหนังสือ">
                                  <HBox.margin>
-                                    <Insets left="50.0" top="20.0" />
+                                    <Insets left="20.0" />
                                  </HBox.margin>
                                  <font>
                                     <Font name="JasmineUPC" size="30.0" />
@@ -133,12 +133,12 @@
                                     <Font name="JasmineUPC Bold" size="36.0" />
                                  </font>
                                  <HBox.margin>
-                                    <Insets left="5.0" top="20.0" />
+                                    <Insets left="5.0" />
                                  </HBox.margin>
                               </Text>
                               <Label fx:id="bookType" text="ประเภทที่คุณเลือก" textFill="#b09f9f">
                                  <HBox.margin>
-                                    <Insets left="5.0" top="20.0" />
+                                    <Insets left="5.0" />
                                  </HBox.margin>
                                  <font>
                                     <Font name="JasmineUPC" size="24.0" />
