--- a/src/main/resources/ku/cs/subscene/about3.fxml
+++ b/src/main/resources/ku/cs/subscene/about3.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="371.0" prefWidth="940.0" style="-fx-background-color: e7bf8c;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="371.0" prefWidth="940.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <ImageView fitHeight="371.0" fitWidth="940.0" layoutX="79.0" layoutY="58.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
             <image>
