--- a/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
+++ b/src/main/resources/ku/cs/provideTypeBookByAdmin.fxml
@@ -105,7 +105,7 @@
                         </HBox>
                         <ScrollPane prefHeight="650.0" prefWidth="1024.0" style="-fx-background-color: #fffcf1;">
                            <content>
-                              <GridPane prefHeight="620.0" prefWidth="1013.0" style="-fx-background-color: ffffff;">
+                              <GridPane fx:id="gridPane" prefHeight="620.0" prefWidth="1013.0" style="-fx-background-color: ffffff;">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
@@ -148,6 +148,18 @@
                                           </Button>
                                        </children>
                                     </AnchorPane>
+                                    <ScrollPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+                                       <content>
+                                          <GridPane fx:id="gridPaneForSubTypeBook" prefHeight="367.0" prefWidth="1015.0" style="-fx-background-color: ffffff;">
+                                            <columnConstraints>
+                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                          </GridPane>
+                                       </content>
+                                    </ScrollPane>
                                  </children>
                               </GridPane>
                            </content>
